# CTC_TEST

./: README.md  Test_Result.xlsx
ctc_test/: CMakeLists.txt  SimpleMovingAverage.h  SimpleMovingAverageTimeLog.h  log_duration.h  main.cpp
